# axum-react-stytch

./: .gitignore  Cargo.toml  README.md
backend/: .env.example  Cargo.toml
backend/src/: app_state.rs  auth.rs  main.rs
backend/src/infra/: config.rs  log.rs
common_types/: Cargo.toml
common_types/src/: auth.rs  lib.rs
frontend/: .env.example  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/routes/: Authenticate.tsx  Login.tsx  Root.tsx
